# OpenConsole

./: CMakeLists.txt  README.md
dep/NT/: ntioapi_x.h
dep/Win32K/: winuserp.h
dep/telemetry/: ProjectTelemetry.h
oss/chromium/base/numerics/: safe_math_shared_impl.h
oss/pcg/: cgmanifest.json
oss/pcg/include/: pcg_random.hpp
oss/stb/: MAINTAINER_README.md
oss/wil/include/wil/: resource.h
oss/wyhash/: MAINTAINER_README.md
oss/xorg_apps_rgb/: cgmanifest.json
src/host/: ApiRoutines.h  ConsoleArguments.cpp  ConsoleArguments.hpp  CursorBlinker.cpp  PtySignalInputThread.cpp  PtySignalInputThread.hpp  VtInputThread.cpp  VtInputThread.hpp  VtIo.cpp  VtIo.hpp  _output.cpp  _stream.cpp  _stream.h  alias.cpp  alias.h  cmdline.cpp  cmdline.h  consoleInformation.cpp  dbcs.cpp  dbcs.h  directio.cpp  directio.h  getset.cpp  getset.h  globals.cpp  globals.h  history.cpp  history.h  init.cpp  input.cpp  input.h  inputBuffer.cpp  inputBuffer.hpp  misc.cpp  misc.h  output.cpp  output.h  outputStream.cpp  outputStream.hpp  precomp.h  (+25 more)
src/host/exe/: exemain.cpp
src/inc/: LibraryIncludes.h
src/inc/til/: color.h  math.h  string.h  winrt.h
src/interactivity/base/: EventSynthesis.cpp  InteractivityFactory.cpp  InteractivityFactory.hpp  ServiceLocator.cpp
src/interactivity/inc/: IConsoleWindow.hpp  IInteractivityFactory.hpp  ServiceLocator.hpp
src/interactivity/onecore/: BgfxEngine.cpp  BgfxEngine.hpp  ConsoleWindow.cpp  ConsoleWindow.hpp  SystemConfigurationProvider.cpp  precomp.h
src/interactivity/win32/: Clipboard.cpp  CustomWindowMessages.h  clipboard.hpp  consoleKeyInfo.cpp  find.cpp  icon.cpp  menu.cpp  precomp.h  resource.h  sources.inc  uiaTextRange.cpp  uiaTextRange.hpp  window.cpp  window.hpp  windowio.cpp  windowproc.cpp
src/interactivity/win32/lib/: win32.LIB.vcxproj  win32.LIB.vcxproj.filters
src/interactivity/win32/ut_interactivity_win32/: Interactivity.Win32.UnitTests.vcxproj  UiaTextRangeTests.cpp  sources
src/internal/: stubs.cpp
src/propslib/: RegistrySerialization.cpp
src/renderer/: dirs
src/renderer/atlas/: AtlasEngine.api.cpp  AtlasEngine.cpp  AtlasEngine.h  AtlasEngine.r.cpp  Backend.h  BackendD2D.cpp  BackendD2D.h  BackendD3D.cpp  BackendD3D.h  BuiltinGlyphs.h  atlas.vcxproj  common.h  dwrite.cpp  dwrite.hlsl  pch.h  shader_common.hlsl  shader_ps.hlsl  shader_vs.hlsl  wic.h
src/renderer/base/: FontCache.h  FontInfoDesired.cpp  RenderEngineBase.cpp  RenderSettings.cpp  renderer.cpp  renderer.hpp
src/renderer/gdi/: gdirenderer.hpp  invalidate.cpp  paint.cpp  state.cpp
src/renderer/inc/: CursorOptions.h  FontInfoDesired.hpp  IRenderData.hpp  IRenderEngine.hpp  RenderEngineBase.hpp  RenderSettings.hpp
src/renderer/uia/: UiaRenderer.cpp  UiaRenderer.hpp
src/renderer/wddmcon/: WddmConRenderer.cpp  WddmConRenderer.hpp  precomp.h
src/server/: ApiDispatchers.cpp  ApiDispatchersInternal.cpp  ApiMessage.cpp  ApiMessage.h  ApiSorter.cpp  ConsoleShimPolicy.cpp  ConsoleShimPolicy.h  IApiRoutines.h  IoDispatchers.cpp  ObjectHandle.cpp  ProcessHandle.cpp  ProcessList.cpp  WaitBlock.h
src/terminal/adapter/: DispatchTypes.hpp  FontBuffer.cpp  FontBuffer.hpp  IInteractDispatch.hpp  ITermDispatch.hpp  ITerminalApi.hpp  InteractDispatch.cpp  InteractDispatch.hpp  PageManager.cpp  PageManager.hpp  SixelParser.cpp  SixelParser.hpp  adaptDispatch.cpp  adaptDispatchGraphics.cpp  precomp.h  sources.inc  termDispatch.hpp  terminalOutput.cpp  terminalOutput.hpp
src/terminal/adapter/lib/: adapter.vcxproj  adapter.vcxproj.filters
src/terminal/adapter/ut_adapter/: adapterTest.cpp  inputTest.cpp  sources
src/terminal/input/: mouseInput.cpp  terminalInput.cpp  terminalInput.hpp
src/terminal/parser/: IStateMachineEngine.hpp  InputStateMachineEngine.cpp  InputStateMachineEngine.hpp  OutputStateMachineEngine.cpp  OutputStateMachineEngine.hpp  stateMachine.cpp  stateMachine.hpp  tracing.cpp  tracing.hpp
src/terminal/parser/ft_fuzzer/: fuzzing_logic.h  sources
src/terminal/parser/ut_parser/: InputEngineTest.cpp  StateMachineTest.cpp  sources
src/tsf/: Implementation.cpp  Implementation.h  precomp.h  sources  tsf.vcxproj  tsf.vcxproj.filters
src/types/: CodepointWidthDetector.cpp  IControlAccessibilityInfo.h  TermControlUiaProvider.cpp  TermControlUiaProvider.hpp  TermControlUiaTextRange.cpp  colorTable.cpp  utils.cpp  viewport.cpp
src/types/inc/: colorTable.hpp
